Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34395

ANGLE fails to build with gcc 64 bit compiler

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.2.0 RC1
    • 5.2.0 Beta1
    • GUI: OpenGL
    • None
    • MinGW
    • 00bf148b07cb7771136ed472766400336ab4d2bf (5.2 RC)

      qtbase\src\3rdparty\angle\src/third_party/trace_event/trace_event.h: In constructor 'gl::TraceEvent::TraceID::TraceID(const void*, unsigned char*)':
      D:\dev\qt\qt-stable\src\qtbase\src\3rdparty\angle\src/third_party/trace_event/trace_event.h:592:82:
      error: cast from 'const void*' to 'long unsigned int' loses precision [-fpermissive]
               m_data(static_cast<unsigned long long>(reinterpret_cast<unsigned long>(id)))
                                                                                        ^
      

      This is with Mingw-builds x64-4.8.0-release-posix-seh-rev2

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes